--- a/songsMS/src/main/resources/application.properties
+++ b/songsMS/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:postgresql://${SONGS_HOST}/song_db
-spring.datasource.username = marven
+spring.datasource.username = songMS
 spring.datasource.password = ${SONGS_PASSWORD}
 server.servlet.context-path=/songsWS-MarvEn/rest
 
@@ -15,3 +15,9 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Hibernate ddl auto (create, create-drop, validate, update)
 # spring.jpa.hibernate.ddl-auto = update
+
+
+#Eureka
+server.port= 8060
+spring.application.name= song-service
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
