--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -3,16 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Parent-Pom</artifactId>
-        <groupId>htwb.ai.MarvEn</groupId>
+        <artifactId>parent</artifactId>
+        <groupId>htwb.ai.EnKBE</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eureka-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>service-registration-and-discovery-client</name>
-    <description>Demo project for Spring Boot</description>
+    <name>Eureka-Client</name>
 
     <properties>
         <java.version>11</java.version>
@@ -48,15 +47,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
     <repositories>
         <repository>
