--- a/cloudGateway/pom.xml
+++ b/cloudGateway/pom.xml
@@ -3,13 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Parent-Pom</artifactId>
-        <groupId>htwb.ai.MarvEn</groupId>
+        <artifactId>parent</artifactId>
+        <groupId>htwb.ai.EnKBE</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloudGateway</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Gateway-Service</name>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
