--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -1,26 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>parent</artifactId>
         <groupId>htwb.ai.EnKBE</groupId>
         <version>1.0</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>authorization-microservice</artifactId>
-    <name>Authorization-Microservice</name>
-    <packaging>jar</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+
+    <artifactId>integration-test</artifactId>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
-
-        <jackson.version>2.9.2</jackson.version> <!-- ${jackson.version} -->
-        <junit.version>5.6.0</junit.version> <!-- ${junit.version} -->
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
@@ -115,6 +108,18 @@
             <groupId>uk.org.webcompere</groupId>
             <artifactId>system-stubs-jupiter</artifactId>
             <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>htwb.ai.EnKBE</groupId>
+            <artifactId>authorization-microservice</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>htwb.ai.EnKBE</groupId>
+            <artifactId>songs-microservice</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
