--- a/authorization/src/main/resources/application.properties
+++ b/authorization/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # spring.jpa.hibernate.ddl-auto = update
 
 #Eureka
-server.port= 8060
+server.port= 8081
 spring.application.name= authorization
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://localhost:8083/eureka
