--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port=8761
+server.port=8083
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
+
+spring.application.name= eureka-service
+eureka.client.serviceUrl.defaultZone= http://localhost:8083/eureka
