--- a/songs/src/main/resources/application.properties
+++ b/songs/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 
 #Eureka
-server.port= 8070
+server.port= 8082
 spring.application.name= song-service
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://localhost:8083/eureka
