fix integration test dependency and implement put playlist

--- a/authorization/src/main/resources/application.properties
+++ b/authorization/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://${SONGS_HOST}:5434/song_db
-spring.datasource.username = songMS
-spring.datasource.password = ${SONGS_PASSWORD}
+spring.datasource.url = jdbc:postgresql://${SONGS_HOST}:5432/user_db
+spring.datasource.username = ${KBE_DB_USER}
+spring.datasource.password = ${SONGS_DB_PASSWORD}
+
 server.servlet.context-path=/songsWS-MarvEn/rest
 
 
