--- a/songs/src/main/resources/application.properties
+++ b/songs/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://${SONGS_HOST}/song_db
-spring.datasource.username = songMS
-spring.datasource.password = ${SONGS_PASSWORD}
+spring.datasource.url = jdbc:postgresql://${SONGS_HOST}:5432/song_db
+spring.datasource.username = ${KBE_DB_USER}
+spring.datasource.password = ${SONGS_DB_PASSWORD}
 server.servlet.context-path=/songsWS-MarvEn/rest
 
 
